* Bugfix: Long text in task description did not break in chrome

--- a/asset/css/task.css
+++ b/asset/css/task.css
@@ -296,6 +296,7 @@ div.task.dragDropTarget > h3 {
 	.tasks .task .details .description * {
 		line-height:15px;
 		white-space:normal;
+		word-wrap: break-word;
 	}
 
 		/* properties */
